Java 버전을 17에서 21로 업그레이드